--- a/microservice-onlineGame.properties
+++ b/microservice-onlineGame.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3319/ref_personne_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
-spring.datasource.username=SA
-spring.datasource.password=""
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3319/adc_online_games_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
+spring.datasource.username=root
+spring.datasource.password=motdepasse
 urbanisation-si.clairprev.limiteNombreAssure=10
