--- a/microservice-onlineGame.properties
+++ b/microservice-onlineGame.properties
@@ -1,5 +1,10 @@
+#server.port=9999
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3319/adc_online_games_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
 spring.datasource.username=root
 spring.datasource.password=motdepasse
 archiduchess.gamesNumberLimit=10
+
+#Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
