--- a/microservice-onlineGame.properties
+++ b/microservice-onlineGame.properties
@@ -1,4 +1,4 @@
-#server.port=9999
+server.port=9999
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3319/adc_online_games_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
