--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -2,6 +2,7 @@ server.port=9001
 
 eureka.client.registerWithEureka:false
 eureka.client.fetchRegistry:false
+eureka.client.serviceUrl.defaultZone:http://localhost:9001/eureka/
 
 #Ajout pour le rafraichissement
 eureka.server.enableSelfPreservation=false
