--- a/microservice-onlineGame.properties
+++ b/microservice-onlineGame.properties
@@ -1,9 +1,15 @@
 server.port=9999
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3319/adc_online_games_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
-spring.datasource.username=root
-spring.datasource.password=motdepasse
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3319/adc_online_games_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
+#spring.datasource.username=root
+#spring.datasource.password=motdepasse
+
+#mongodb
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=icc-games
+
 archiduchess.gamesNumberLimit=10
 
 #Eureka
