--- a/microservice-onlineGame.properties
+++ b/microservice-onlineGame.properties
@@ -1,5 +1,7 @@
 server.port=9999
 
+spring.main.allow-bean-definition-overriding=true
+
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3319/adc_online_games_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
 #spring.datasource.username=root
