--- a/microservice-onlineGame.properties
+++ b/microservice-onlineGame.properties
@@ -12,7 +12,11 @@ spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=icc-games
 
-archiduchess.gamesNumberLimit=10
+#logging
+#logging.level.org.springframework.data=debug
+#logging.level.=error
+
+archiduchess.gamesNumberLimit=300
 
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
